--- a/projects.json
+++ b/projects.json
@@ -3,11 +3,11 @@
   "projects": [
     {
       "name": "AutoRedTeam-Orchestrator",
-      "description": "AI驱动的自动化红队编排框架 | AI-Driven Automated Red Team Orchestration Framework | 74 MCP Tools | 2000+ Payloads | Full ATT&CK Coverage | Cross-platform (Linux/Windows/macOS)",
+      "description": "AI-Driven Automated Red Team Orchestration Framework | AI驱动的自动化红队编排框架 | 101 MCP Tools | 2000+ Payloads | Full ATT&CK Coverage | MCTS Attack Planner | Knowledge Graph | Cross-platform",
       "url": "https://github.com/Coff0xc/AutoRedTeam-Orchestrator",
       "stars": 70,
       "language": "Python",
-      "updatedAt": "2026-02-01T20:11:59Z"
+      "updatedAt": "2026-02-02T03:09:42Z"
     },
     {
       "name": "Github-API-scan",
